fix textwrap

--- a/src/components/Player/style.module.scss
+++ b/src/components/Player/style.module.scss
@@ -19,8 +19,13 @@
         align-items: center;
 
         .info {
-            display: inline-block;
             margin-left: 1rem;
+            display: inline-block;
+            overflow: hidden;
+
+            p, span {
+                white-space: nowrap;
+            }
 
             p {
                 display: block;
