--- a/src/css/Playlist.module.scss
+++ b/src/css/Playlist.module.scss
@@ -2,6 +2,7 @@
     header {
         padding: 5.5rem 2rem 1.5rem;
         display: flex;
+        align-items: flex-end;
 
         img {
             width: 14.5rem;
@@ -76,7 +77,7 @@
                 padding: .5rem 2.5rem .5rem 1rem;
                 display: grid;
                 grid-template-columns: .5fr 8fr 5fr 4fr 2fr;
-
+                
                 span:last-child {
                     margin: auto 0;
                     display: initial;
